# Nutri-View

./: .dockerignore  .gitignore  AutoUpdate.ps1  Dockerfile  Makefile  MoveToIIS.ps1  README.md  Technical Report.docx  index.html  package-lock.json  package.json  package.json5  sync.js  vite.config.js
.github/workflows/: main.yml
backend/: apppy.py  apppy.spec  config.py  error_handlers.py  guest_permissions.json  requirements.txt  routes.py  services.py  utils.py  validate.py
public/: thank-you.html  web.config
src/: App.vue  main.js
src-tauri/: .gitignore  Cargo.toml  main.js  move.js  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/: pages.css
src/components/: Calculator.vue  ColumnDropdown.vue  DatabaseDropdown.vue  ExportConfig.vue  ExportTableStats.vue  FolderTree.vue  GraphDisplay.vue  IntervalDropdown.vue  MessageBox.vue  Selection.vue  StatisticsDropdown.vue  TableStatsDisplay.vue
src/pages/: Converter.vue  Graph.vue  GuestPermissions.vue  Help.vue  Loading.vue  Login.vue  Map.vue  Project.vue
src/router/: index.js
src/store/: index.js
src/utils/: componentImports.js
