[package]
name = "CWA-Viewer"
version = "0.2.7"
description = "CWA Viewer"
authors = ["Viransh Shah"]
license = "MIT"
repository = "https://github.com/shahviransh/CWA-Viewer"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
reqwest = "0.11"
